--- a/index.html
+++ b/index.html
@@ -13,5 +13,32 @@
     <header>
         <h1>Salary Calculator</h1>
     </header>
+    <div class="employee-inputs">
+        <input type="text"  id="first-name" placeholder="first name" />
+        <input type="text" id="last-name" placeholder="last name" />
+        <input type="number" id="id-number" placeholder="ID" />
+        <input type="text" id="job-title" placeholder="title" />
+        <input type="number" id="annual-salary" placeholder="annual salary" />
+        <button id="submit-button">Submit</button>
+    </div>
+    <table><span>Add Employee</span>
+        <thead>
+            <!-- employee data input form here -->
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID Number</th>
+            <th>Job Title</th>
+            <th>Annual Salary</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Greg</td>
+                <td>Tambo</td>
+                <td>00000</td>
+                <td>"Table Maker"</td>
+                <td>$0.00</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
