Add some basic style to the table

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <input type="number" id="id-number" placeholder="ID" />
         <input type="text" id="job-title" placeholder="title" />
         <input type="number" id="annual-salary" placeholder="annual salary" />
-        <button id="submit-button">Submit</button>
+        <div id="submit-button-spacer">
+            <button id="submit-button">Submit</button>
+        </div>
     </div>
-    <table><span>Add Employee</span>
+    <table><span id="emp-header">Add Employee</span>
         <thead>
             <!-- employee data input form here -->
             <th>First Name</th>
