Button click that logs to the console plus more styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Salary Calculator</h1>
     </header>
     <div class="employee-inputs">
+        <p>Add Employee</p>
         <input type="text"  id="first-name" placeholder="first name" />
         <input type="text" id="last-name" placeholder="last name" />
         <input type="number" id="id-number" placeholder="ID" />
@@ -23,7 +24,8 @@
             <button id="submit-button">Submit</button>
         </div>
     </div>
-    <table><span id="emp-header">Add Employee</span>
+    <table>
+        <p id="emp-header">Employee</p>
         <thead>
             <!-- employee data input form here -->
             <th>First Name</th>
