Created a function to append data to DOM

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <th>Job Title</th>
             <th>Annual Salary</th>
         </thead>
-        <tbody>
-            <tr>
+        <tbody id="employee-table-body">
+            <!-- <tr>
                 <td>Greg</td>
                 <td>Tambo</td>
                 <td>00000</td>
                 <td>"Table Maker"</td>
                 <td>$0.00</td>
-            </tr>
+            </tr> -->
         </tbody>
     </table>
 </body>
