Global variables for monthly costs, with calculate function

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
             </tr> -->
         </tbody>
     </table>
+    <div id="total-monthly-cost">Total monthly cost: </div>
 </body>
 </html>
