--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <th>ID Number</th>
             <th>Job Title</th>
             <th>Annual Salary</th>
+            <th class="delete-header"></th>
         </thead>
         <tbody id="employee-table-body">
             <!-- <tr>
